--- a/index.html
+++ b/index.html
@@ -2,9 +2,35 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Playing with webpack</title>
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
-    <script src="./dist/main.js"></script>
+    <div id="app-container">
+      <h1>Users</h1>
+      <button type="button" name="fetch-users">Fetch Users</button>
+      <!-- Data goes here inside this div:  -->
+      <div class="users-list">
+        <!-- Data properties for each <article> are: 'email' and 'nat'  -->
+
+        <article>
+          <span>US</span>
+          <h6>oliver.petersen@example.com</h6>
+        </article>
+
+        <article>
+          <span>GB</span>
+          <h6>jimmy.wiggins@example.com </h6>
+        </article>
+
+        <article>
+          <span>ES</span>
+          <h6>alejandra.salamanca@example.com </h6>
+        </article>
+
+      </div>
+    </div>
+  <script src="./dist/main.js"></script>
   </body>
 </html>
